--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <h1> Analyzing one of the myths in data visualization</h1>
-<h3> LI Yujie Jade 15250717</h3>
+<p> 
+  LI Yujie Jade 15250717
+</p>
+
+Introduction
+The visualization case comes from National Data published by National Bureau of Statistics of China. 
+It's about national foreign currency reserve from 2011 to 2015. 
+Why it's confusing
+The initial chart emphasised every single value using big circle area but delibrately played down the changes using small circle area.
+Justification
+<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1fhz5wKnvGNjRB7iKumG6bAH7N6wnpxqxIMRQZyHMj30/pubchart?oid=1548016282&amp;format=interactive"></iframe>
+Here I use   
