--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <p> 
   LI Yujie Jade 15250717
 </p>
-
-Introduction
-The visualization case comes from National Data published by National Bureau of Statistics of China. 
-It's about national foreign currency reserve from 2011 to 2015. 
-Why it's confusing
-The initial chart emphasised every single value using big circle area but delibrately played down the changes using small circle area.
-Justification
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1fhz5wKnvGNjRB7iKumG6bAH7N6wnpxqxIMRQZyHMj30/pubchart?oid=1548016282&amp;format=interactive"></iframe>
-Here I use   
+<p>
+<ol>
+  <li>Introduction</li>
+  <p>
+    The visualization case comes from National Data published by National Bureau of Statistics of China. 
+    It's about national foreign currency reserve from 2011 to 2015. 
+  </p>
+  <li>Why it's confusing</li>
+  <p>
+    The initial chart emphasised every single value using big circle area but delibrately played down the changes using small circle area.
+  </p>
+  <li>Justification</li>
+  <p>
+  <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1fhz5wKnvGNjRB7iKumG6bAH7N6wnpxqxIMRQZyHMj30/pubchart?oid=1548016282&amp;format=interactive"></iframe>
+  </p>
+  Here I use the line chart to show how the national foreign reserve changes over these 5 years. 
+  If using the first way to visualize data, viewers can easily see how the values are big and overlook the changes,
+  especially the decline in 2015.
+  
