--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 </p>
 <p>
 <ol>
-  <li>Introduction</li>
+  <li><h2>Introduction</h2></li>
   <p>
     The visualization case comes from National Data published by National Bureau of Statistics of China. 
     It's about national foreign currency reserve from 2011 to 2015. 
   </p>
-  <li>Why it's confusing</li>
+  <li><h2>Why it's confusing</h2></li>
   <p>
     The initial chart emphasised every single value using big circle area but delibrately played down the changes using small circle area.
   </p>
-  <li>Justification</li>
+  <li><h2>Justification</h2></li>
   <p>
   <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1fhz5wKnvGNjRB7iKumG6bAH7N6wnpxqxIMRQZyHMj30/pubchart?oid=1548016282&amp;format=interactive"></iframe>
   </p>
