--- a/index.html
+++ b/index.html
@@ -20,4 +20,20 @@
   Here I use the line chart to show how the national foreign reserve changes over these 5 years. 
   If using the first way to visualize data, viewers can easily see how the values are big and overlook the changes,
   especially the decline in 2015.
-  
+  <li><h2>Reference</h2></li>
+ <a href=”http://data.stats.gov.cn/swf.htm?m=turnto&id=556”> initial visualization case </a>
+  <ul>
+    <li>2011</li>
+    <img src="https://drive.google.com/file/d/0B0VMdEnyEQ7hSHZHakEzVkt1OG8/view?usp=sharing">
+    <li>2012</li>
+    <img src="https://drive.google.com/file/d/0B0VMdEnyEQ7hX3phWmRVY19tbjQ/view?usp=sharing">
+    <li>2013</li>
+    <img src="https://drive.google.com/file/d/0B0VMdEnyEQ7hV0JCU3JFeE1ac00/view?usp=sharing">
+    <li>2014</li>
+    <img src="https://drive.google.com/file/d/0B0VMdEnyEQ7hNEJORlFaRG5lZnc/view?usp=sharing">
+    <li>2015</li>
+    <img src="https://drive.google.com/file/d/0B0VMdEnyEQ7hX3phWmRVY19tbjQ/view?usp=sharing">
+  </ul>
+ </ol>
+
+
