--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
   If using the first way to visualize data, viewers can easily see how the values are big and overlook the changes,
   especially the decline in 2015.
   <li><h2>Reference</h2></li>
- <a href=”http://data.stats.gov.cn/swf.htm?m=turnto&id=556”> initial visualization case </a>
+ <a href=”http://data.stats.gov.cn/vchart.htm”> initial visualization case </a>
   <ul>
     <li>2011</li>
-    <img src="https://drive.google.com/file/d/0B0VMdEnyEQ7hSHZHakEzVkt1OG8/view?usp=sharing">
+    <img src="https://img5.doubanio.com/view/status/raw/public/7c53382f46fc5e6.jpg">
     <li>2012</li>
-    <img src="https://drive.google.com/file/d/0B0VMdEnyEQ7hX3phWmRVY19tbjQ/view?usp=sharing">
+    <img src="https://img1.doubanio.com/view/status/raw/public/6e0b4f36ba676aa.jpg">
     <li>2013</li>
-    <img src="https://drive.google.com/file/d/0B0VMdEnyEQ7hV0JCU3JFeE1ac00/view?usp=sharing">
+    <img src="https://img1.doubanio.com/view/status/raw/public/d409fe90ac3ff5a.jpg">
     <li>2014</li>
-    <img src="https://drive.google.com/file/d/0B0VMdEnyEQ7hNEJORlFaRG5lZnc/view?usp=sharing">
+    <img src="https://img3.doubanio.com/view/status/raw/public/add1129072e9622.jpg">
     <li>2015</li>
-    <img src="https://drive.google.com/file/d/0B0VMdEnyEQ7hX3phWmRVY19tbjQ/view?usp=sharing">
+    <img src="https://img3.doubanio.com/view/status/raw/public/00603e18ecab98e.jpg">
   </ul>
  </ol>
 
