--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
   If using the first way to visualize data, viewers can easily see how the values are big and overlook the changes,
   especially the decline in 2015.
   <li><h2>Reference</h2></li>
- <a href=”http://data.stats.gov.cn/vchart.htm”> initial visualization case </a>
+ <a href=”http://data.stats.gov.cn/index.html”> initial visualization case </a>
   <ul>
     <li>2011</li>
-    <img src="https://img5.doubanio.com/view/status/raw/public/7c53382f46fc5e6.jpg">
+    <img src="2011.png">
     <li>2012</li>
-    <img src="https://img1.doubanio.com/view/status/raw/public/6e0b4f36ba676aa.jpg">
+    <img src="2012.png">
     <li>2013</li>
-    <img src="https://img1.doubanio.com/view/status/raw/public/d409fe90ac3ff5a.jpg">
+    <img src="2013.png">
     <li>2014</li>
-    <img src="https://img3.doubanio.com/view/status/raw/public/add1129072e9622.jpg">
+    <img src="2014.png">
     <li>2015</li>
-    <img src="https://img3.doubanio.com/view/status/raw/public/00603e18ecab98e.jpg">
+    <img src="2015.png">
   </ul>
  </ol>
 
