--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>hw1</head>
+  <head>
+    <title>homework1</title>
+  </head>
   <body>
 <h1> Analyzing one of the myths in data visualization</h1>
 <p> 
